--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,115 @@ pom.xml
 .lein-deps-sum
 targer
 *~
+/target/classes/clj_zoo_watcher/core$cdo0$fn__258.class
+/target/classes/clj_zoo_watcher/core$cdo0$fn__260.class
+/target/classes/clj_zoo_watcher/core$cdo0$fn__262.class
+/target/classes/clj_zoo_watcher/core$cdo0.class
+/target/classes/clj_zoo_watcher/core$cdo2.class
+/target/classes/clj_zoo_watcher/core$child_watcher$fn__229.class
+/target/classes/clj_zoo_watcher/core$child_watcher.class
+/target/classes/clj_zoo_watcher/core$con_watcher.class
+/target/classes/clj_zoo_watcher/core$data_example.class
+/target/classes/clj_zoo_watcher/core$file_data_watcher.class
+/target/classes/clj_zoo_watcher/core$immediate_children$fn__224.class
+/target/classes/clj_zoo_watcher/core$immediate_children.class
+/target/classes/clj_zoo_watcher/core$loading__4784__auto__.class
+/target/classes/clj_zoo_watcher/core$persistent_QMARK_.class
+/target/classes/clj_zoo_watcher/core$remove_kid$fn__220.class
+/target/classes/clj_zoo_watcher/core$remove_kid.class
+/target/classes/clj_zoo_watcher/core$start_watching_children$fn__242.class
+/target/classes/clj_zoo_watcher/core$start_watching_children$fn__244.class
+/target/classes/clj_zoo_watcher/core$start_watching_children.class
+/target/classes/clj_zoo_watcher/core$start_watching_root.class
+/target/classes/clj_zoo_watcher/core$test_connwatcher.class
+/target/classes/clj_zoo_watcher/core$watcher.class
+/target/classes/clj_zoo_watcher/core$wclient.class
+/target/classes/clj_zoo_watcher/core$wroot.class
+/target/classes/clj_zoo_watcher/core__init.class
+/target/classes/clj_zoo_watcher/multi$add_child_to_m_ref$fn__269.class
+/target/classes/clj_zoo_watcher/multi$add_child_to_m_ref.class
+/target/classes/clj_zoo_watcher/multi$child_watchers.class
+/target/classes/clj_zoo_watcher/multi$exists_watcher.class
+/target/classes/clj_zoo_watcher/multi$loading__4784__auto__.class
+/target/classes/clj_zoo_watcher/multi$start_watching.class
+/target/classes/clj_zoo_watcher/multi$watch_for_children$fn__280.class
+/target/classes/clj_zoo_watcher/multi$watch_for_children$fn__282.class
+/target/classes/clj_zoo_watcher/multi$watch_for_children.class
+/target/classes/clj_zoo_watcher/multi__init.class
+/target/classes/zookeeper$acl.class
+/target/classes/zookeeper$acl_id.class
+/target/classes/zookeeper$add_auth_info.class
+/target/classes/zookeeper$auth_acl.class
+/target/classes/zookeeper$children$fn__125.class
+/target/classes/zookeeper$children.class
+/target/classes/zookeeper$close.class
+/target/classes/zookeeper$compare_and_set_data.class
+/target/classes/zookeeper$connect$fn__96.class
+/target/classes/zookeeper$connect.class
+/target/classes/zookeeper$create$fn__112.class
+/target/classes/zookeeper$create.class
+/target/classes/zookeeper$create_all.class
+/target/classes/zookeeper$data$fn__162.class
+/target/classes/zookeeper$data$fn__165.class
+/target/classes/zookeeper$data.class
+/target/classes/zookeeper$delete$fn__137.class
+/target/classes/zookeeper$delete.class
+/target/classes/zookeeper$delete_all.class
+/target/classes/zookeeper$delete_children.class
+/target/classes/zookeeper$digest_acl.class
+/target/classes/zookeeper$exists$fn__104.class
+/target/classes/zookeeper$exists.class
+/target/classes/zookeeper$filter_children_by_pattern.class
+/target/classes/zookeeper$filter_children_by_prefix.class
+/target/classes/zookeeper$filter_children_by_suffix.class
+/target/classes/zookeeper$get_acl$fn__182.class
+/target/classes/zookeeper$get_acl$fn__185.class
+/target/classes/zookeeper$get_acl.class
+/target/classes/zookeeper$host_acl.class
+/target/classes/zookeeper$ip_acl.class
+/target/classes/zookeeper$loading__4784__auto__.class
+/target/classes/zookeeper$register_watcher.class
+/target/classes/zookeeper$set_data$fn__172.class
+/target/classes/zookeeper$set_data.class
+/target/classes/zookeeper$state.class
+/target/classes/zookeeper$world_acl.class
+/target/classes/zookeeper/internal$acl_callback$reify__62.class
+/target/classes/zookeeper/internal$acl_callback.class
+/target/classes/zookeeper/internal$children_callback$reify__53.class
+/target/classes/zookeeper/internal$children_callback.class
+/target/classes/zookeeper/internal$client_states$fn__79.class
+/target/classes/zookeeper/internal$client_states.class
+/target/classes/zookeeper/internal$data_callback$reify__59.class
+/target/classes/zookeeper/internal$data_callback.class
+/target/classes/zookeeper/internal$event_to_map.class
+/target/classes/zookeeper/internal$event_types$fn__71.class
+/target/classes/zookeeper/internal$event_types.class
+/target/classes/zookeeper/internal$keeper_states$fn__75.class
+/target/classes/zookeeper/internal$keeper_states.class
+/target/classes/zookeeper/internal$loading__4784__auto__.class
+/target/classes/zookeeper/internal$make_watcher$reify__44.class
+/target/classes/zookeeper/internal$make_watcher.class
+/target/classes/zookeeper/internal$perm_or.class
+/target/classes/zookeeper/internal$promise_callback$fn__66.class
+/target/classes/zookeeper/internal$promise_callback.class
+/target/classes/zookeeper/internal$stat_callback$reify__50.class
+/target/classes/zookeeper/internal$stat_callback.class
+/target/classes/zookeeper/internal$stat_to_map.class
+/target/classes/zookeeper/internal$string_callback$reify__47.class
+/target/classes/zookeeper/internal$string_callback.class
+/target/classes/zookeeper/internal$try_STAR_.class
+/target/classes/zookeeper/internal$void_callback$reify__56.class
+/target/classes/zookeeper/internal$void_callback.class
+/target/classes/zookeeper/internal__init.class
+/target/classes/zookeeper/util$extract_id.class
+/target/classes/zookeeper/util$filter_nodes_by_pattern$fn__89.class
+/target/classes/zookeeper/util$filter_nodes_by_pattern.class
+/target/classes/zookeeper/util$filter_nodes_by_prefix.class
+/target/classes/zookeeper/util$hash_password.class
+/target/classes/zookeeper/util$index_sequential_nodes$fn__84.class
+/target/classes/zookeeper/util$index_sequential_nodes.class
+/target/classes/zookeeper/util$loading__4784__auto__.class
+/target/classes/zookeeper/util$sort_sequential_nodes.class
+/target/classes/zookeeper/util__init.class
+/target/classes/zookeeper__init.class
+/target/stale/dependencies
